# online_shop

./: .dockerignore  .gitignore  README.md  docker-compose.yml  makefile  setup.cfg
backend/: .dockerignore  .env.template  .gitignore  README.md  alembic.ini  docker-compose.yml  dockerfile  pyproject.toml
backend/certs/: jwt-private.pem  jwt-public.pem
backend/migrations/: env.py
backend/migrations/versions/: 040ea53baaa0_pizza_user_relation.py  1df7ef9a5a24_unique_sizes.py  33f2e3a28d52_pizza_type.py  38fc61660d2d_ref.py  577b16de0098_pizza_size.py  5e222c53960f_ref2.py  68681fc5b24e_profile.py  6c448e04a22f_pizza_category_can_be_null.py  7e8f75a42edd_.py  8c3d0c946aa5_pizza_category.py  9543dbaff60d_session.py  b2d216df60d7_association_table.py  bea3102cd1d4_pizza_money_description.py  c5875d57229f_order_order_item_coupon.py  c61cd70b740a_.py  d0f8e43523b6_user_email.py  dcd2eb21a5b8_pizza.py  ebac30ae9600_relation_between_user_and_pizza.py  fa09a5882166_user_accesstoken.py
backend/src/: config.py  log_config.py  main.py
backend/src/_spicking/basic_auth/: api.py
backend/src/_spicking/cookies_auth/: api.py  exceptions.py  models.py  schemas.py  services.py
backend/src/_spicking/jwt_auth/: api.py  dependencies.py  exceptions.py  models.py  schemas.py  services.py  tokens.py
backend/src/_spicking/pizzas/: models.py
backend/src/_spicking/pizzas/api/: __init__.py  categories.py  pizzas.py
backend/src/_spicking/pizzas/services/: __init__.py  categories.py  pizzas.py
backend/src/api_v1/: __init__.py
backend/src/api_v1/auth/: README.md  api.py  backend.py  dependencies.py  exceptions.py  manager.py  models.py  schemas.py  services.py  tokens.py  utils.py
backend/src/api_v1/coupons/: models.py
backend/src/api_v1/demo_auth/: api.py
backend/src/api_v1/orders/: models.py  schemas.py  services.py
backend/src/api_v1/pizzas/: api.py  exceptions.py  models.py  schemas.py  services.py
backend/src/api_v1/pizzas/api/: categories.py  pizzas.py  sizes.py  types.py
backend/src/api_v1/pizzas/services/: __init__.py  categories.py  pizzas.py  sizes.py  types.py
backend/src/api_v1/profiles/: api.py  models.py  schemas.py  services.py
backend/src/api_v1/users/: api.py  models.py  schemas.py  services.py
backend/src/entrypoints/: clear_db.py  fill_db.py
backend/src/entrypoints/commands/: _base.py  clear.py  fill.py  script.py
backend/src/pizzas/: api.py  models.py  schemas.py
backend/src/shared/: db.py  db_filters_sorts.py  db_utils.py  jwt.py  redis.py  schemas.py
backend/tests/: conftest.py
uml/: entity_relations.drawio  project.drawio  usecases.drawio
